kubernetes-linkerd/linkerd-viz-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "linkerd-viz"
  name: "linkerd-viz-dashboard"
  annotations:
    cert-manager.io/issuer: "linkerd-viz-issuer"
    nginx.ingress.kubernetes.io/upstream-vhost: "$service_name.$namespace.svc.cluster.local:8084"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: "linkerd-viz-cert"
      hosts: ["linkerd.k3s"]
  rules:
    - host: "linkerd.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "web"
                port:
                  number: 8084
